changed sqldialect to register, enabled PolyType.TEXT for substitutes