@@ -30,6 +30,7 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Queue;
+import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -187,55 +188,31 @@ public class BsonUtil {
     public static BsonValue getAsBson( PolyValue obj, PolyType type, GridFSBucket bucket ) {
         if ( obj instanceof List ) {
             BsonArray array = new BsonArray();
-            obj.asList().forEach( el -> array.add( getAsBson( el, type, bucket ) ) );
+            obj.asList().forEach( (Consumer<? super PolyValue>) el -> array.add( getAsBson( el, type, bucket ) ) );
             return array;
         } else if ( obj == null ) {
             return new BsonNull();
         }
-        switch ( type ) {
-            case BIGINT:
-                return handleBigInt( obj );
-            case DECIMAL:
-                return handleDecimal( obj );
-            case TINYINT:
-                return handleTinyInt( obj );
-            case SMALLINT:
-                return handleSmallInt( obj );
-            case INTEGER:
-                return handleInteger( obj );
-            case FLOAT:
-            case REAL:
-                return new BsonDouble( Double.parseDouble( obj.toString() ) );
-            case DOUBLE:
-                return handleDouble( obj );
-            case DATE:
-                return handleDate( obj );
-            case TIME:
-                return handleTime( obj );
-            case TIMESTAMP:
-                return handleTimestamp( obj );
-            case BOOLEAN:
-                return new BsonBoolean( obj.asBoolean().value );
-            case BINARY:
-                return new BsonString( obj.asBinary().value.toBase64String() );
-            case AUDIO:
-            case IMAGE:
-            case VIDEO:
-            case FILE:
-                return handleMultimedia( bucket, obj );
-            case INTERVAL_MONTH:
-                return handleMonthInterval( obj );
-            case INTERVAL_DAY:
-                return handleDayInterval( obj );
-            case INTERVAL_YEAR:
-                return handleYearInterval( obj );
-            case JSON:
-                return handleDocument( obj );
-            case CHAR:
-            case VARCHAR:
-            default:
-                return new BsonString( obj.toString() );
-        }
+        return switch ( type ) {
+            case BIGINT -> handleBigInt( obj );
+            case DECIMAL -> handleDecimal( obj );
+            case TINYINT -> handleTinyInt( obj );
+            case SMALLINT -> handleSmallInt( obj );
+            case INTEGER -> handleInteger( obj );
+            case FLOAT, REAL -> new BsonDouble( Double.parseDouble( obj.toString() ) );
+            case DOUBLE -> handleDouble( obj );
+            case DATE -> handleDate( obj );
+            case TIME -> handleTime( obj );
+            case TIMESTAMP -> handleTimestamp( obj );
+            case BOOLEAN -> new BsonBoolean( obj.asBoolean().value );
+            case BINARY -> new BsonString( obj.asBinary().value.toBase64String() );
+            case AUDIO, IMAGE, VIDEO, FILE -> handleMultimedia( bucket, obj );
+            case INTERVAL_MONTH -> handleMonthInterval( obj );
+            case INTERVAL_DAY -> handleDayInterval( obj );
+            case INTERVAL_YEAR -> handleYearInterval( obj );
+            case JSON -> handleDocument( obj );
+            default -> new BsonString( obj.toString() );
+        };
     }
 
 
@@ -268,55 +245,31 @@ public class BsonUtil {
      * @return the transformer method, which can be used to get the correct BsonValues
      */
     private static Function<PolyValue, BsonValue> getBsonTransformerPrimitive( Queue<PolyType> types, GridFSBucket bucket ) {
-        switch ( Objects.requireNonNull( types.poll() ) ) {
-            case BIGINT:
-                return BsonUtil::handleBigInt;
-            case DECIMAL:
-                return BsonUtil::handleDecimal;
-            case TINYINT:
-                return BsonUtil::handleTinyInt;
-            case SMALLINT:
-                return BsonUtil::handleSmallInt;
-            case INTEGER:
-                return BsonUtil::handleInteger;
-            case FLOAT:
-            case REAL:
-                return BsonUtil::handleNonDouble;
-            case DOUBLE:
-                return BsonUtil::handleDouble;
-            case DATE:
-                return BsonUtil::handleDate;
-            case TIME:
-                return BsonUtil::handleTime;
-            case TIMESTAMP:
-                return BsonUtil::handleTimestamp;
-            case BOOLEAN:
-                return BsonUtil::handleBoolean;
-            case BINARY:
-                return BsonUtil::handleBinary;
-            case AUDIO:
-            case IMAGE:
-            case VIDEO:
-            case FILE:
-                return ( o ) -> handleMultimedia( bucket, o );
-            case INTERVAL_MONTH:
-                return BsonUtil::handleMonthInterval;
-            case INTERVAL_DAY:
-                return BsonUtil::handleDayInterval;
-            case INTERVAL_YEAR:
-                return BsonUtil::handleYearInterval;
-            case JSON:
-                return BsonUtil::handleDocument;
-            case ARRAY:
+        return switch ( Objects.requireNonNull( types.poll() ) ) {
+            case BIGINT -> BsonUtil::handleBigInt;
+            case DECIMAL -> BsonUtil::handleDecimal;
+            case TINYINT -> BsonUtil::handleTinyInt;
+            case SMALLINT -> BsonUtil::handleSmallInt;
+            case INTEGER -> BsonUtil::handleInteger;
+            case FLOAT, REAL -> BsonUtil::handleNonDouble;
+            case DOUBLE -> BsonUtil::handleDouble;
+            case DATE -> BsonUtil::handleDate;
+            case TIME -> BsonUtil::handleTime;
+            case TIMESTAMP -> BsonUtil::handleTimestamp;
+            case BOOLEAN -> BsonUtil::handleBoolean;
+            case BINARY -> BsonUtil::handleBinary;
+            case AUDIO, IMAGE, VIDEO, FILE -> ( o ) -> handleMultimedia( bucket, o );
+            case INTERVAL_MONTH -> BsonUtil::handleMonthInterval;
+            case INTERVAL_DAY -> BsonUtil::handleDayInterval;
+            case INTERVAL_YEAR -> BsonUtil::handleYearInterval;
+            case JSON -> BsonUtil::handleDocument;
+            case ARRAY -> {
                 Function<PolyValue, BsonValue> transformer = getBsonTransformer( types, bucket );
-                return ( o ) -> new BsonArray( o.asList().stream().map( transformer ).collect( Collectors.toList() ) );
-            case DOCUMENT:
-                return o -> BsonDocument.parse( "{ k:" + (o.isString() ? o.asString().toQuotedJson() : o.toJson()) + "}" ).get( "k" );
-            case CHAR:
-            case VARCHAR:
-            default:
-                return BsonUtil::handleString;
-        }
+                yield ( o ) -> new BsonArray( o.asList().stream().map( e -> transformer.apply( (PolyValue) e ) ).toList() );
+            }
+            case DOCUMENT -> o -> BsonDocument.parse( "{ k:" + (o.isString() ? o.asString().toQuotedJson() : o.toJson()) + "}" ).get( "k" );
+            default -> BsonUtil::handleString;
+        };
     }
 
 
@@ -445,39 +398,11 @@ public class BsonUtil {
             return null;
         }
 
-        switch ( finalType ) {
-            case BOOLEAN:
-                return el.getValue();
-            case TINYINT:
-                return el.getValue();
-            case SMALLINT:
-                return el.getValue();
-            case INTEGER:
-            case DATE:
-            case TIME:
-                return el.getValue();
-            case BIGINT:
-            case TIMESTAMP:
-                return el.getValue();
-            case DECIMAL:
-                return el.getValue().toString();
-            case FLOAT:
-            case REAL:
-                return el.getValue();
-            case DOUBLE:
-                return el.getValue();
-            case CHAR:
-            case VARCHAR:
-                return el.getValue();
-            case GEOMETRY:
-            case FILE:
-            case IMAGE:
-            case VIDEO:
-            case AUDIO:
-                return el.value.asBinary().value.toBase64String();
-            default:
-                return el.getValue();
-        }
+        return switch ( finalType ) {
+            case DECIMAL -> el.getValue().toString();
+            case GEOMETRY, FILE, IMAGE, VIDEO, AUDIO -> el.value.asBinary().value.toBase64String();
+            default -> el.getValue();
+        };
     }
 
 
@@ -509,44 +434,21 @@ public class BsonUtil {
      * @return the supported class
      */
     public static Class<?> getClassFromType( PolyType type ) {
-        switch ( type ) {
-            case BOOLEAN:
-                return Boolean.class;
-            case TINYINT:
-                return Short.class;
-            case SMALLINT:
-            case INTEGER:
-                return Integer.class;
-            case BIGINT:
-                return Long.class;
-            case DECIMAL:
-                return BigDecimal.class;
-            case FLOAT:
-            case REAL:
-                return Float.class;
-            case DOUBLE:
-                return Double.class;
-            case DATE:
-                return Date.class;
-            case TIME:
-            case TIME_WITH_LOCAL_TIME_ZONE:
-                return Time.class;
-            case TIMESTAMP:
-            case TIMESTAMP_WITH_LOCAL_TIME_ZONE:
-                return Timestamp.class;
-            case CHAR:
-            case VARCHAR:
-            case BINARY:
-            case VARBINARY:
-                return String.class;
-            case FILE:
-            case IMAGE:
-            case VIDEO:
-            case AUDIO:
-                return PushbackInputStream.class;
-            default:
-                throw new IllegalStateException( "Unexpected value: " + type );
-        }
+        return switch ( type ) {
+            case BOOLEAN -> Boolean.class;
+            case TINYINT -> Short.class;
+            case SMALLINT, INTEGER -> Integer.class;
+            case BIGINT -> Long.class;
+            case DECIMAL -> BigDecimal.class;
+            case FLOAT, REAL -> Float.class;
+            case DOUBLE -> Double.class;
+            case DATE -> Date.class;
+            case TIME, TIME_WITH_LOCAL_TIME_ZONE -> Time.class;
+            case TIMESTAMP, TIMESTAMP_WITH_LOCAL_TIME_ZONE -> Timestamp.class;
+            case CHAR, VARCHAR, BINARY, VARBINARY -> String.class;
+            case FILE, IMAGE, VIDEO, AUDIO -> PushbackInputStream.class;
+            default -> throw new IllegalStateException( "Unexpected value: " + type );
+        };
     }
 
 
@@ -600,34 +502,15 @@ public class BsonUtil {
      * @return the corresponding type number for MongoDB
      */
     public static int getTypeNumber( PolyType type ) {
-        switch ( type ) {
-            case BOOLEAN:
-                return 8;
-            case TINYINT:
-            case SMALLINT:
-            case INTEGER:
-                return 16;
-            case BIGINT:
-            case DATE:
-            case TIME:
-            case TIME_WITH_LOCAL_TIME_ZONE:
-            case TIMESTAMP:
-            case TIMESTAMP_WITH_LOCAL_TIME_ZONE:
-                return 18;
-            case DECIMAL:
-                return 19;
-            case FLOAT:
-            case REAL:
-            case DOUBLE:
-                return 1;
-            case CHAR:
-            case VARCHAR:
-            case BINARY:
-            case VARBINARY:
-                return 2;
-            default:
-                throw new IllegalStateException( "Unexpected value: " + type );
-        }
+        return switch ( type ) {
+            case BOOLEAN -> 8;
+            case TINYINT, SMALLINT, INTEGER -> 16;
+            case BIGINT, DATE, TIME, TIME_WITH_LOCAL_TIME_ZONE, TIMESTAMP, TIMESTAMP_WITH_LOCAL_TIME_ZONE -> 18;
+            case DECIMAL -> 19;
+            case FLOAT, REAL, DOUBLE -> 1;
+            case CHAR, VARCHAR, BINARY, VARBINARY -> 2;
+            default -> throw new IllegalStateException( "Unexpected value: " + type );
+        };
     }
 
 
@@ -673,29 +556,15 @@ public class BsonUtil {
 
 
     public static AlgDataType getTypeFromBson( BsonType type, AlgDataTypeFactory factory ) {
-        switch ( type ) {
-            case INT32:
-            case DECIMAL128:
-            case INT64:
-            case DOUBLE:
-                return factory.createPolyType( PolyType.DECIMAL );
-            case BINARY:
-                return factory.createPolyType( PolyType.BINARY );
-            case BOOLEAN:
-                return factory.createPolyType( PolyType.BOOLEAN );
-            case ARRAY:
-                return factory.createArrayType( factory.createPolyType( PolyType.ANY ), -1 );
-            case DOCUMENT:
-                return factory.createMapType( factory.createPolyType( PolyType.ANY ), factory.createPolyType( PolyType.ANY ) );
-            case DATE_TIME:
-            case TIMESTAMP:
-                return factory.createPolyType( PolyType.TIMESTAMP );
-            case NULL:
-            case SYMBOL:
-            case STRING:
-            default:
-                return factory.createPolyType( PolyType.ANY );
-        }
+        return switch ( type ) {
+            case INT32, DECIMAL128, INT64, DOUBLE -> factory.createPolyType( PolyType.DECIMAL );
+            case BINARY -> factory.createPolyType( PolyType.BINARY );
+            case BOOLEAN -> factory.createPolyType( PolyType.BOOLEAN );
+            case ARRAY -> factory.createArrayType( factory.createPolyType( PolyType.ANY ), -1 );
+            case DOCUMENT -> factory.createMapType( factory.createPolyType( PolyType.ANY ), factory.createPolyType( PolyType.ANY ) );
+            case DATE_TIME, TIMESTAMP -> factory.createPolyType( PolyType.TIMESTAMP );
+            default -> factory.createPolyType( PolyType.ANY );
+        };
     }
 
 
@@ -718,7 +587,7 @@ public class BsonUtil {
 
     public static Comparable<?> getAsObject( BsonValue value ) {
         switch ( value.getBsonType() ) {
-            case END_OF_DOCUMENT:
+            case END_OF_DOCUMENT, TIMESTAMP, MIN_KEY, MAX_KEY, UNDEFINED, OBJECT_ID, DATE_TIME, JAVASCRIPT_WITH_SCOPE, SYMBOL, JAVASCRIPT, DB_POINTER, REGULAR_EXPRESSION:
                 break;
             case DOUBLE:
                 return value.asDouble().decimal128Value();
@@ -730,38 +599,16 @@ public class BsonUtil {
                 return Arrays.toString( value.asArray().toArray() );
             case BINARY:
                 return value.asBinary().asUuid();
-            case UNDEFINED:
-                break;
-            case OBJECT_ID:
-                break;
             case BOOLEAN:
                 return value.asBoolean().getValue();
-            case DATE_TIME:
-                break;
             case NULL:
                 return null;
-            case REGULAR_EXPRESSION:
-                break;
-            case DB_POINTER:
-                break;
-            case JAVASCRIPT:
-                break;
-            case SYMBOL:
-                break;
-            case JAVASCRIPT_WITH_SCOPE:
-                break;
             case INT32:
                 return value.asInt32().getValue();
-            case TIMESTAMP:
-                break;
             case INT64:
                 return value.asInt64().getValue();
             case DECIMAL128:
                 return BigDecimal.valueOf( value.asDecimal128().doubleValue() );
-            case MIN_KEY:
-                break;
-            case MAX_KEY:
-                break;
 
         }
         throw new GenericRuntimeException( "BsonType cannot be transformed." );
@@ -825,7 +672,7 @@ public class BsonUtil {
 
     public static PolyValue toPolyValue( BsonValue input ) {
         switch ( input.getBsonType() ) {
-            case END_OF_DOCUMENT:
+            case END_OF_DOCUMENT, MAX_KEY, MIN_KEY, TIMESTAMP, JAVASCRIPT_WITH_SCOPE, SYMBOL, JAVASCRIPT, DB_POINTER, REGULAR_EXPRESSION, DATE_TIME, OBJECT_ID, UNDEFINED, BINARY:
                 break;
             case DOUBLE:
                 return PolyDouble.of( input.asDouble().getValue() );
@@ -847,40 +694,14 @@ public class BsonUtil {
                     list.add( toPolyValue( value ) );
                 }
                 return list;
-            case BINARY:
-                break;
-            case UNDEFINED:
-                break;
-            case OBJECT_ID:
-                break;
             case BOOLEAN:
                 return PolyBoolean.of( input.asBoolean().getValue() );
-            case DATE_TIME:
-                break;
             case NULL:
                 return PolyNull.NULL;
-            case REGULAR_EXPRESSION:
-                break;
-            case DB_POINTER:
-                break;
-            case JAVASCRIPT:
-                break;
-            case SYMBOL:
-                break;
-            case JAVASCRIPT_WITH_SCOPE:
-                break;
-            case INT32:
-                return PolyInteger.of( input.asInt32().getValue() );
-            case TIMESTAMP:
-                break;
-            case INT64:
+            case INT32, INT64:
                 return PolyInteger.of( input.asInt32().getValue() );
             case DECIMAL128:
                 return PolyBigDecimal.of( input.asDecimal128().getValue().bigDecimalValue() );
-            case MIN_KEY:
-                break;
-            case MAX_KEY:
-                break;
         }
         throw new org.apache.commons.lang3.NotImplementedException( "Not considered: " + input.getBsonType() );
     }
